added some sections

--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@ body {
 .title {
     color: white;
     text-align: center;
-    font-size: 2rem;
+    font-size: 2.5rem;
+    margin-bottom: 2rem;
     color: #efba13;
 }
 
